[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["Logan Cox <mail@logan-cox.com>"]
description = "A simple key-value store"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false


[dependencies]


[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

