[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["Logan Cox <mail@logan-cox.com>"]
description = "A simple key-value store"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false


[dependencies]
assert_cmd = "0.11.0"
clap = { version = "4.5.32", features = ["derive", "cargo"] }
predicates = "1.0.0"
tempfile = "3.19.0"
walkdir = "2.5.0"


[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

